--- a/README.Rmd
+++ b/README.Rmd
@@ -43,9 +43,9 @@ knitr::opts_chunk$set(
 ## Introduction
 
 `dissmapr` is an R package for analysing compositional dissimilarity and biodiversity turnover across spatial gradients.
-It provides scalable, modular workflows that integrate species occurrence, environmental data, and multi-site metrics to quantify and predict biodiversity patterns.
-A core feature is the use of zeta diversity, which extends beyond pairwise comparisons to capture shared species across multiple sites---offering deeper insight into community assembly, turnover, and connectivity.
-By incorporating modern approaches such as multi-site Generalised Dissimilarity Modelling (MS-GDM), `dissmapr` enables robust mapping, bioregional classification, and scenario-based forecasting.
+It provides scalable, modular workflows that integrate species occurrence, environmental data, and multi-site compositional turnover metrics to quantify and predict biodiversity patterns.
+A core feature is the use of zeta diversity, which extends beyond pairwise comparisons to capture shared species across multiple sites - offering deeper insight into community assembly, turnover, and connectivity, for both rare and common species.
+By incorporating different regression methods within the framework of Multi-Site Generalised Dissimilarity Modelling (MS-GDM), `dissmapr` enables robust mapping, bioregional classification, and scenario-based forecasting.
 Designed for flexibility and reproducibility, it supports biodiversity monitoring and conservation planning at landscape to regional scales.
 
 ------------------------------------------------------------------------
@@ -53,18 +53,18 @@ Designed for flexibility and reproducibility, it supports biodiversity monitorin
 ## Step-by-Step Workflow
 
 `dissmapr` implements a structured, reproducible workflow for analysing biodiversity patterns and delineating bioregions.
-Each function aligns with a specific step, guiding users from data acquisition to predictive mapping.
+Each function aligns with a specific step in the workflow, guiding users from data acquisition to predictive mapping.
 The workflow begins with sourcing species occurrence and georeferenced environmental data, followed by data formatting and calculation of compositional turnover using zeta diversity metrics (via the `zetadiv` package).
 Multi-Site Generalized Dissimilarity Modelling (MS-GDM) is then applied to model and predict dissimilarity across landscapes.
-These predictions feed into the Dissimilarity Cube, which classifies spatial clusters of species composition into distinct bioregions.
-The framework supports the integration of historical and future climate data to assess shifts in biodiversity and detect emerging, shifting, or dissolving bioregions under global change.
+As part of the Dissimilarity Cube in the [Biodiversity Building Blocks for Policy](https://b-cubed.eu/) project, the outputs and predictions from MS-GDM are classified into spatial clusters of species composition, representing distinct bioregions.
+The workflow also supports the integration of historical and future climate data to assess shifts in biodiversity and detect emerging, shifting, or dissolving bioregions under global change.
 This step-by-step structure, mirrored in the accompanying tutorial sections, promotes accessibility, transparency, and ecological insight at multiple spatial and temporal scales.
 
 ------------------------------------------------------------------------
 
 ### 1. Install and load `dissmapr`
 
-Install and load the `dissmapr` package from GitHub, ensuring all functions are available for use in the analysis workflow.
+Install and load the `dissmapr` package from GitHub, ensuring all functions are available for use in the workflow.
 
 ```{r install, eval=FALSE, include=TRUE}
 # install remotes if needed
@@ -96,14 +96,85 @@ library(tidyr)      # Tidy data reshaping
 library(zoo)        # Time series utilities  
 library(sf)         # Vector spatial data  
 library(terra)      # Raster spatial operations  
-library(zetadiv)    # Multi-site biodiversity turnover  
+library(tidyterra)  # supplies geom_spatraster()
+library(zetadiv)    # Multi-site dissimilarity modelling
 library(ggplot2)    # Grammar of graphics  
 library(viridis)    # Perceptual color scales  
 ```
 
 ------------------------------------------------------------------------
 
-### 3. User-defined area of interest and grid resolution
+### 3. Get species occurrence records using `get_occurrence_data()`
+
+To contextualise the following steps of the workflow, we use the butterfly data in South Africa, accessed from GBIF, as the case for demonstration. Ultimately, the choice for the AoI and taxa is user-specific. 
+This section focuses on automating the retrieval and pre-processing of biodiversity occurrence data from various sources, including:
+
+i)  local `databases`.csv` files,
+ii) URLs or `.zip` files from the Global Biodiversity Information Facility (GBIF), and
+iii) species occurrence cubes from B3 (specification) [*work in progress*].
+
+The function assembles data on species distributions across specified taxonomic groups and regions, producing presence-absence or abundance matrices that quantify species co-occurrence within locations.
+
+```{r get-occurrence}
+bfly_data = get_occurrence_data(
+  data        = 'inst/extdata/gbif_butterflies.csv',
+  source_type = 'local_csv',
+  sep         = '\t'
+)
+
+# Check results
+dim(bfly_data)
+str(bfly_data)
+head(bfly_data[,1:6])
+```
+
+------------------------------------------------------------------------
+
+### 4. Format data using `format_df()`
+
+Use `format_df` to *standardise and reshape* raw biodiversity tables into the *long* or *wide* format required by later `dissmapr` steps.
+Importantly, this function does not alter the spatial resolution of the original observations - it simply tidies the data by automatically identifying key columns (e.g., coordinates, species, and values), assigning missing observation/site IDs, and reformatting the data for analysis.
+Outputs include a cleaned `site_obs` dataset and `site_spp` matrix for further processing:
+
+• **site_obs**: Simplified table with unique `site_id`, `x`, `y`, `species` and `value` records (long format).
+• **site_spp**: Site-by-species matrix for biodiversity assessments (wide format).
+
+#### Format data into long (site_obs) and wide (site_spp) formats
+
+```{r format-df}
+bfly_result = format_df(
+  data        = bfly_data, # A `data.frame` of biodiversity records
+  species_col = 'verbatimScientificName', # Name of species column (required for `"long"`)
+  value_col   = 'pa', # Name of value column (e.g. presence/abundance; for `"long"`)
+  extra_cols  = NULL, # Character vector of other columns to keep
+  format      = 'long' # Either`"long"` or `"wide"`. If `NULL`, inferred from `species_col` & `value_col`
+)
+
+# Check `bfly_result` structure
+str(bfly_result, max.level = 1)
+
+# Optional: Create new objects from list items
+site_obs = bfly_result$site_obs
+site_spp = bfly_result$site_spp
+
+# Check results
+dim(site_obs)
+head(site_obs)
+
+dim(site_spp)
+head(site_spp[,1:6])
+
+#### Get parameters from processed data to use later
+# Number of species
+(n_sp = dim(site_spp)[2] - 3)
+
+# Species names
+sp_cols = names(site_spp)[-c(1:3)]
+sp_cols[1:10]
+```
+------------------------------------------------------------------------
+
+### 5. User-defined area of interest and grid resolution
 
 Load the spatial boundary data for South Africa to serve as the geographic reference for all subsequent biodiversity analyses and visualizations.
 
@@ -127,86 +198,20 @@ grid_masked = mask(grid, rsa_vect)
 
 ------------------------------------------------------------------------
 
-### 4. Get species occurrence records using `get_occurrence_data`
+### 6. Summarise records by grid centroid using `generate_grid()`
 
-This section focuses on automating the retrieval and pre-processing of biodiversity occurrence data from various sources, including:
+Use `generate_grid` to overlay a user-defined lattice on the study region—whose bounds are inferred from the occurrence data—without modifying the underlying observations themselves. The function constructs a raster‐based grid of the chosen cell size, assigns each point a unique `grid_id`, and compiles a summary of user-specified attributes for every cell. It returns three coordinated outputs: 
 
-i)  local `databases`.csv` files,
-ii) URLs or `.zip` files from the Global Biodiversity Information Facility (GBIF), and
-iii) species occurrence cubes from B3 (specification) [*work in progress*].
+• **grid**: `SpatRaster` with grid index 
+• **grid_sf**: `sf` and `data.frame` i.e. lattice polygon features for mapping or spatial joins 
+• **block_sp**: `data.frame` that records per-cell totals, centroids, and other statistics. 
 
-The function assembles data on species distributions across specified taxonomic groups and regions, producing presence-absence or abundance matrices that quantify species co-occurrence within locations.
+By aggregating raw records into consistent spatial units, `generate_grid` provides the structured foundation needed for subsequent landscape-scale biodiversity analyses.
 
-```{r get-occurrence}
-bfly_data = get_occurrence_data(
-  data        = 'inst/extdata/gbif_butterflies.csv',
-  source_type = 'local_csv',
-  sep         = '\t'
-)
 
-# Check results
-dim(bfly_data)
-head(bfly_data[,1:6])
-```
+#### Assign records to a grid at a set resolution
 
-------------------------------------------------------------------------
-
-### 5. Format data using `format_df`
-
-Use `format_df` to standardise and reshape biodiversity data into long or wide formats.
-The function automatically identifies key columns (e.g., coordinates, species, and values), assigns missing site IDs, and reformats the data for analysis.
-Outputs include a cleaned dataset and species-site matrices for further processing:
-
-• site_xy: Holds spatial coordinates of sampled sites.\
-• site_sp: Site-by-species matrix for biodiversity assessments.
-
-#### Format data into long and wide formats
-
-```{r format-df}
-bfly_result = format_df(
-  data        = bfly_data,
-  species_col = 'verbatimScientificName',
-  value_col   = 'pa',
-  extra_cols  = NULL,
-  format      = 'long'
-)
-
-# Optional: Create new objects from list items
-site_obs = bfly_result$site_obs
-site_spp = bfly_result$site_sp
-
-# Check results
-dim(site_obs)
-head(site_obs)
-
-dim(site_spp)
-head(site_spp[,1:6])
-```
-
-#### Get parameters to use later
-
-```{r spp-cols}
-# Get parameters from processed data
-# Number of species columns
-(n_sp = dim(site_spp)[2] - 3)
-
-# Species names
-sp_cols = names(site_spp)[-c(1:3)]
-names(sp_cols)[1:5]
-```
-
-------------------------------------------------------------------------
-
-### 6. Summarise records by grid centroid using `generate_grid`
-
-Use `generate_grid` to divide the study area, derived from the geographic extent of the occurrence data above, into grids of user-defined resolution, creating a spatial grid over a specified geographic extent.
-It assigns unique grid IDs to points and summarizes selected data columns within each grid cell.
-The function outputs a raster grid, grid polygons for visualization, and a data frame summarizing the contents of each grid cell, including totals and centroids.
-It is particularly useful for aggregating spatial data, such as biodiversity observations, into predefined spatial units for further analysis.
-
-#### Assign records to a grid at a set resolution (e.g. 0.5°)
-
-Aggregate species records into equal-area grid cells to enable spatially standardized biodiversity analyses.
+Aggregate species records into grid cells of user-specified size (e.g. 0.5°) to enable spatially standardized biodiversity analyses.
 
 ```{r grid}
 grid_list = generate_grid(
@@ -217,6 +222,9 @@ grid_list = generate_grid(
   sum_col_range = 4:ncol(site_spp),
   crs_epsg   = 4326
 )
+
+# Check `grid_list` structure
+str(grid_list, max.level = 1)
 
 # Optional: Create new objects from list items
 aoi_grid = grid_list$grid_sf
@@ -392,7 +400,7 @@ dim(site_spp)
 head(site_spp[,1:6])
 ```
 
-#### Fetch record of occurrence counts calculated using `generate_grid`
+#### Fetch record of occurrence counts calculated using `generate_grid()`
 
 `generate_grid` summarised the number of species observations per grid cell to assess sampling effort.
 
@@ -428,7 +436,7 @@ dim(site_spp_pa)
 head(site_spp_pa[,1:6])
 ```
 
-#### Fetch species richness values calculated using `generate_grid`
+#### Fetch species richness values calculated using `generate_grid()`
 
 `generate_grid` calculated species richness per site based on binary presence/absence records.
 
@@ -450,14 +458,22 @@ head(site_spp_pa[,1:6])
 ras_effRich = grid_list$grid[[2:3]]
 
 # Plot `ras_effRich` using colour palettes from `viridis`
-plot(sqrt(ras_effRich), col = turbo(100))
+# plot(sqrt(ras_effRich), col = turbo(100))
+plot(
+  sqrt(ras_effRich),
+  col   = turbo(100),
+  colNA = NA,            # <-- NA cells completely transparent
+  axes  = FALSE
+)
+
+# plot(vect(rsa), add = TRUE, border = "black")
 ```
 
 ***Note**: occurrence coordinates are only used for assigning then into grids; they are not needed beyond this step.*
 
 ------------------------------------------------------------------------
 
-### 8. Generate site by environment matrix using `get_enviro_data`
+### 8. Generate site by environment matrix using `get_enviro_data()`
 
 Use `get_enviro_data` to extract environmental variables for spatial points from either species observations or grid centroids.
 Data can be sourced from online repositories (e.g. *WorldClim*, *SoilGrids* via `geodata`) or local rasters.
@@ -496,10 +512,10 @@ Combine environmental rasters with sampling effort and species richness layers f
 
 ```{r ras}
 # Combine `SpatRast`
-ras_enviro_effRich = c(ras_effRich, resample(ras_enviro, ras_effRich))
+ras_enviro_effRich = c(sqrt(ras_effRich), resample(ras_enviro, ras_effRich))
 
 # Plot the first 4 layers of `ras_enviro_effRich`
-plot(ras_enviro_effRich[[1:4]])
+plot(ras_enviro_effRich[[1:4]], col = turbo(100))
 ```
 
 #### Create data.frame of environmental variables with site centroids 'xy'
@@ -550,7 +566,7 @@ sbe = env_df %>%
   select(grid_id, centroid_lon, centroid_lat, obs_sum, spp_rich, everything())
 ```
 
-### 9. Change coordinates projection using `sf::st_transform`
+### 9. Change coordinates projection using `sf::st_transform()`
 
 Reproject spatial coordinates from geographic (WGS84) to a projected system (e.g. Albers Equal Area) for analyses requiring distance in meters, such as spatial clustering or environmental modelling.
 
@@ -572,7 +588,7 @@ head(xy_utm_df)
 
 ------------------------------------------------------------------------
 
-### 10. Check for colinearity using `rm_correlated`
+### 10. Check for colinearity using `rm_correlated()`
 
 Identify and remove highly correlated environmental variables to reduce multicollinearity in subsequent analyses.
 This step ensures model stability by retaining only informative, non-redundant predictors based on a user-defined correlation threshold.
@@ -593,7 +609,7 @@ ncol(env_vars_reduced)
 
 ### 11. Calculate Zeta decline for orders 2:15
 
-#### Expectation of zeta diversity decline using `zetadiv::Zeta.decline.ex`
+#### Expectation of zeta diversity decline using `zetadiv::Zeta.decline.ex()`
 
 Computes the expectation of zeta diversity, the number of species shared by multiple assemblages for a range of orders (number of assemblages or sites), using a formula based on the occupancy of the species, and fits the decline to an exponential and a power law relationship.
 *Generate statistics and figures, no maps*
@@ -610,7 +626,7 @@ zeta_decline_ex = Zeta.decline.ex(site_spp_pa[,6:ncol(site_spp_pa)],
 
 > **Interpretation**: The near‐perfect straight line in the exponential panel (high R²) indicates that an exponential model provides the most parsimonious description of how species shared across sites decline as you add more sites—consistent with a stochastic, memory-less decline in common species. A power law will also fit in broad strokes, but deviates at high orders, suggesting exponential decay is the better choice for these data.
 
-#### Zeta diversity decline using Monte Carlo sampling `zetadiv::Zeta.decline.mc`
+#### Zeta diversity decline using Monte Carlo sampling `zetadiv::Zeta.decline.mc()`
 
 Computes zeta diversity, the number of species shared by multiple assemblages, for a range of orders (number of assemblages or sites), using combinations of sampled sites, and fits the decline to an exponential and a power law relationship.
 *Generate statistics and figures, no maps*
@@ -633,7 +649,7 @@ zeta_mc_utm = Zeta.decline.mc(site_spp_pa[,-(1:6)],
 
 ### 12. Calculate Zeta decay for orders 2:8
 
-#### Zeta distance decay for a range of numbers of assemblages or sites using `zetadiv::Zeta.ddecays`
+#### Zeta distance decay for a range of numbers of assemblages or sites using `zetadiv::Zeta.ddecays()`
 
 Computes the distance decay of zeta diversity for a range of orders (number of assemblages or sites), using generalised linear models.
 *Generate statistics and figures, no maps*
@@ -670,7 +686,7 @@ zeta_decays = Zeta.ddecays(xy_utm_df[,3:4],
 
 ### 13. Run a Multi-Site Generalised Dissimilarity Model for order 2
 
-#### Multi-site generalised dissimilarity modelling for a set of environmental variables and distances using `zetadiv::Zeta.msgdm`
+#### Multi-site generalised dissimilarity modelling for a set of environmental variables and distances using `zetadiv::Zeta.msgdm()`
 
 Computes a regression model of zeta diversity for a given order (number of assemblages or sites) against a set of environmental variables and distances between sites.
 The different regression models available are generalised linear models, generalised linear models with negative constraints, generalised additive models, shape constrained additive models, and I-splines.
@@ -721,7 +737,7 @@ summary(zeta2$model)
 
 ------------------------------------------------------------------------
 
-### 14. Predict current Zeta Diversity (zeta2) using `predict_dissim`
+### 14. Predict current Zeta Diversity (zeta2) using `predict_dissim()`
 
 -   *In the 'sbe' add 'sam.max', a constant for all sites = max(sam.eff)*
 -   *Predict for the updated sbe and xy*
@@ -752,7 +768,7 @@ head(predictors_df[,1:7])
 
 ------------------------------------------------------------------------
 
-### 15. Run clustering analyses using `map_bioreg`
+### 15. Run clustering analyses using `map_bioreg()`
 
 -   *Map bioregion clusters of current zeta2*
 -   *Generate maps of dissimilarity (the rgb plot)*
@@ -773,7 +789,7 @@ bioreg_result = map_bioreg(
 
 ------------------------------------------------------------------------
 
-### 16. Predict future Zeta Diversity and map bioregion change using `map_bioregDiff`
+### 16. Predict future Zeta Diversity and map bioregion change using `map_bioregDiff()`
 
 -   *with appended (future scenarios) environmental variables and 'sam.max' in sbe*
 -   *For m number of scenarios plus the present scenario (step 14) and n sites of xy*
