--- a/vignettes/tutorial_1.Rmd
+++ b/vignettes/tutorial_1.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "getting-started"
+title: "tutorial-1"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{getting-started}
+  %\VignetteIndexEntry{tutorial-1}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
