--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -1,15 +1,10 @@
 ---
-output:
-  github_document:
-    toc: true
-    toc_depth: 2
-  html_document:
-    toc: true
-    theme: cerulean     # or bootstrap, etc.
-    mathjax: default
-editor_options: 
-  markdown: 
-    wrap: sentence
+title: "getting-started"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{getting-started}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
